apps/services/grafana/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-ingressroute
  namespace: hello-world
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hello.tuntelder.com`)
      kind: Rule
      services:
        - name: hello-world-service
          port: 80
      middlewares:
        - name: crowdsec-mw
          namespace: edge
        - name: authentik
          namespace: edge
  tls:
    certResolver: letsencrypt
